refactor: 重构函数调用表达式分析器
- 优化了 CallExpressionAnalyzer 类的结构和逻辑
- 增加了对 os.syscall 特殊调用的处理
- 改进了错误处理和类型检查机制
- 代码注释更加详细，提高了可读性和可维护性