@@ -20,93 +20,88 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * {@code CallExpressionAnalyzer} 是函数调用表达式 ({@link CallExpressionNode}) 的语义分析器。
- *
- * <p>它负责处理所有形式的调用表达式（如 {@code callee(arg1, arg2, ...)}），并执行如下操作：
+ * 负责分析和类型推断所有函数调用表达式，包括模块函数调用、结构体方法调用以及普通函数调用。
+ * <p>
+ * 主要职责如下：
  * <ul>
- *   <li>识别调用目标：支持三种调用方式
- *       <ol>
- *           <li>模块函数调用： {@code module.func(...)} </li>
- *           <li>结构体实例方法调用： {@code instance.method(...)} </li>
- *           <li>普通函数调用（当前模块或导入模块）： {@code func(...)} </li>
- *       </ol>
- *   </li>
- *   <li>在函数解析时遵循如下规则：
- *       <ul>
- *           <li>若是模块调用，必须确认模块已导入。</li>
- *           <li>若是结构体实例调用，需先解析左侧表达式类型并确认方法存在。</li>
- *           <li>若是普通函数调用，优先在当前模块中查找，若未找到，则尝试唯一导入模块解析。</li>
- *       </ul>
- *   </li>
- *   <li>参数检查与类型推断：
- *       <ul>
- *           <li>检查实参与形参数量是否一致。</li>
- *           <li>检查类型兼容性，支持数值宽化转换 (int → double)。</li>
- *           <li>支持数值到字符串的隐式转换（自动视为调用 {@code to_string}）。</li>
- *       </ul>
- *   </li>
- *   <li>错误处理：
- *       <ul>
- *           <li>函数/方法未定义时记录 {@link SemanticError}。</li>
- *           <li>访问未导入的模块时报错。</li>
- *           <li>跨模块访问私有函数（以 "_" 开头）时报错。</li>
- *           <li>参数数量或类型不匹配时报错。</li>
- *       </ul>
- *   </li>
- *   <li>最终返回函数的返回类型；若分析过程中存在错误，返回 {@link BuiltinType#INT} 作为默认回退类型。</li>
+ *   <li>解析调用目标，支持三种调用形式：</li>
+ *   <ol>
+ *     <li>模块函数调用（如 <code>module.func(...)</code>）</li>
+ *     <li>结构体实例方法调用（如 <code>instance.method(...)</code>）</li>
+ *     <li>普通函数调用（如 <code>func(...)</code>，仅限当前模块）</li>
+ *   </ol>
+ *   <li>依据调用目标类型，执行相应的符号查找和类型匹配：</li>
+ *   <ul>
+ *     <li>模块调用需确认模块已导入且函数存在</li>
+ *     <li>结构体方法调用需先解析实例类型并查找方法</li>
+ *     <li>普通函数调用只在当前模块内查找，若导入模块中存在同名函数，提示需显式指定模块名</li>
+ *   </ul>
+ *   <li>参数检查和类型推断，包括：</li>
+ *   <ul>
+ *     <li>参数数量校验</li>
+ *     <li>参数类型兼容性（支持数值类型宽化和数值到字符串的隐式转换）</li>
+ *     <li>特例支持 os.syscall 的可变参数规则</li>
+ *   </ul>
+ *   <li>权限和语义错误处理：</li>
+ *   <ul>
+ *     <li>禁止跨模块访问以 <code>"_"</code> 开头的私有函数</li>
+ *     <li>记录未导入模块、未定义函数、参数不匹配等所有类型语义错误</li>
+ *   </ul>
+ *   <li>最终根据函数签名推断并返回返回值类型。若存在语义错误，返回 {@link BuiltinType#INT} 作为回退类型。</li>
  * </ul>
  * <p>
- * 规则：
- * - 外部模块函数必须显式写 `模块.函数`，不再支持未限定名。
- * - 跨模块访问以下划线开头的私有函数禁止。
+ * 设计约束：
+ * <ul>
+ *   <li>外部模块函数必须采用“模块.函数”全限定名调用</li>
+ *   <li>禁止跨模块访问私有（下划线开头）函数</li>
+ * </ul>
  */
-public class CallExpressionAnalyzer implements ExpressionAnalyzer<CallExpressionNode> {
+public class CallExpressionAnalyzer implements ExpressionAnalyzer {
 
     /**
-     * 分析函数调用表达式，推断返回类型并执行语义检查。
+     * 分析函数调用表达式节点，推断返回类型并执行完整的语义检查。
      *
-     * @param ctx    当前语义分析上下文，提供日志、错误记录、模块访问等功能。
-     * @param mi     当前模块信息，用于函数查找及模块依赖判断。
-     * @param fn     当前正在分析的函数节点（函数作用域）。
-     * @param locals 局部符号表，用于变量和结构体实例查找。
-     * @param call   待分析的函数调用表达式节点。
-     * @return 调用表达式的返回类型；若存在语义错误，返回 {@link BuiltinType#INT}。
+     * @param ctx    当前语义分析上下文
+     * @param mi     当前模块信息
+     * @param fn     当前作用域函数节点
+     * @param locals 当前作用域局部符号表
+     * @param node   待分析的函数调用表达式节点
+     * @return 返回调用表达式的返回类型；如存在语义错误，返回 {@link BuiltinType#INT} 作为回退类型
      */
     @Override
     public Type analyze(Context ctx,
                         ModuleInfo mi,
                         FunctionNode fn,
                         SymbolTable locals,
-                        CallExpressionNode call) {
-        ctx.log("检查函数/方法调用: " + call.callee());
+                        ExpressionNode node) {
+        // 检查节点类型是否合法
+        if (!(node instanceof CallExpressionNode call)) {
+            ctx.getErrors().add(new SemanticError(node, "内部错误：非调用表达式"));
+            return BuiltinType.INT;
+        }
 
-        ExpressionNode callee = call.callee();   // 被调用的表达式（函数名或成员访问）
-        ModuleInfo targetModule = mi;            // 初始假设目标模块为当前模块
-        String functionName;                     // 被调用函数的名称
-        FunctionType funcType;                   // 被调用函数的类型签名
+        ExpressionNode callee = call.callee();
 
-        // ========== 支持三种调用形式 ==========
-        // 1. 模块.函数(...)
-        // 2. 结构体实例.方法(...)
-        // 3. 普通函数(...)
+        ModuleInfo targetModule = mi;   // 默认目标模块为当前模块
+        String functionName;            // 被调用函数名称
+        FunctionType funcType;          // 被调用函数类型
 
+        // 1. 处理成员调用（模块.函数 或 结构体实例.方法 或 任意表达式.方法）
         if (callee instanceof MemberExpressionNode memberExpr) {
-            // -------- 情况1 & 情况2: 成员调用表达式 --------
             ExpressionNode left = memberExpr.object();
             String member = memberExpr.member();
 
             if (left instanceof IdentifierNode idNode) {
-                // 左侧是标识符（可能是模块名或结构体变量）
                 String leftName = idNode.name();
 
-                // 1. 模块.函数
+                // 1.1 作为模块调用，需确认模块已导入且存在目标函数
                 if (ctx.getModules().containsKey(leftName) &&
                         (mi.getImports().contains(leftName) || mi.getName().equals(leftName))) {
                     targetModule = ctx.getModules().get(leftName);
                     functionName = member;
                     funcType = targetModule.getFunctions().get(functionName);
                 } else {
-                    // 2. 结构体实例.方法（重载）
+                    // 1.2 作为结构体实例调用，解析实例类型并查找方法
                     Symbol sym = locals.resolve(leftName);
                     if (sym != null && sym.type() instanceof StructType structType) {
                         funcType = structType.getMethod(member, call.arguments().size());
@@ -123,7 +118,7 @@ public class CallExpressionAnalyzer implements ExpressionAnalyzer<CallExpression
                     }
                 }
             } else {
-                // 任意表达式.方法（重载）
+                // 1.3 任意表达式.方法，如链式结构体方法调用
                 Type leftType = ctx.getRegistry()
                         .getExpressionAnalyzer(left)
                         .analyze(ctx, mi, fn, locals, left);
@@ -138,18 +133,18 @@ public class CallExpressionAnalyzer implements ExpressionAnalyzer<CallExpression
                     }
                 } else {
                     ctx.getErrors().add(new SemanticError(callee,
-                            "不支持的成员调用对象类型: " + leftType));
+                            "无法在该对象上调用方法: " + leftType));
                     return BuiltinType.INT;
                 }
             }
         }
-        // 普通函数调用
+        // 2. 普通函数调用，仅在当前模块查找
         else if (callee instanceof IdentifierNode idNode) {
             functionName = idNode.name();
-            funcType = mi.getFunctions().get(functionName); // 仅在当前模块查找
+            funcType = mi.getFunctions().get(functionName);
 
+            // 如未找到，检查导入模块是否存在同名函数，提示用户必须写模块名
             if (funcType == null) {
-                // 如果导入模块里存在该函数，提示必须写 模块.函数
                 List<String> candidates = new ArrayList<>();
                 for (String imp : mi.getImports()) {
                     ModuleInfo mod = ctx.getModules().get(imp);
@@ -160,20 +155,21 @@ public class CallExpressionAnalyzer implements ExpressionAnalyzer<CallExpression
                 if (!candidates.isEmpty()) {
                     ctx.getErrors().add(new SemanticError(idNode,
                             "外部模块函数调用必须写为 模块.函数，例如: "
-                                    + candidates.get(0) + "." + functionName + "(...)"));
+                                    + candidates.getFirst() + "." + functionName + "(...)"));
                     return BuiltinType.INT;
                 }
             }
         }
-        // 其它情况
+        // 3. 其它不支持的调用方式，直接报错
         else {
             ctx.getErrors().add(new SemanticError(callee,
                     "不支持的调用方式: " + callee));
             return BuiltinType.INT;
         }
 
-        // -------- 访问控制检查 --------
-        if (functionName != null && funcType != null &&
+        // 校验访问权限：禁止跨模块访问以“_”开头的私有函数
+        if (targetModule != null &&
+                functionName != null &&
                 functionName.startsWith("_") &&
                 !targetModule.getName().equals(mi.getName())) {
             ctx.getErrors().add(new SemanticError(callee,
@@ -181,45 +177,72 @@ public class CallExpressionAnalyzer implements ExpressionAnalyzer<CallExpression
             return BuiltinType.INT;
         }
 
-        // -------- 函数是否存在 --------
+        // 校验函数是否存在
         if (funcType == null) {
             ctx.getErrors().add(new SemanticError(callee,
                     "函数未定义: " + functionName));
             return BuiltinType.INT;
         }
 
-        // -------- 分析实参类型 --------
+        // 分析所有实参类型
         List<Type> args = new ArrayList<>();
         for (ExpressionNode arg : call.arguments()) {
             args.add(ctx.getRegistry().getExpressionAnalyzer(arg)
                     .analyze(ctx, mi, fn, locals, arg));
         }
 
-        if (args.size() != funcType.paramTypes().size()) {
-            ctx.getErrors().add(new SemanticError(call,
-                    "参数数量不匹配: 期望 " + funcType.paramTypes().size()
-                            + ", 实际 " + args.size()));
-        } else {
-            for (int i = 0; i < args.size(); i++) {
-                Type expected = funcType.paramTypes().get(i);
-                Type actual = args.get(i);
+        // 特例支持：os.syscall 允许可变参数，首参要求为 string
+        boolean isSyscallVarargs = (targetModule != null
+                && "os".equals(targetModule.getName())
+                && "syscall".equals(functionName));
 
-                boolean ok = expected.isCompatible(actual)
-                        || (expected.isNumeric() && actual.isNumeric()
-                        && Type.widen(actual, expected) == expected);
-
-                if (!ok && expected == BuiltinType.STRING && actual.isNumeric()) {
-                    ok = true; // 自动数值→string
+        if (isSyscallVarargs) {
+            if (args.isEmpty()) {
+                ctx.getErrors().add(new SemanticError(call, "syscall 至少需要一个子命令字符串参数"));
+            } else {
+                // 检查第一个参数类型
+                Type expected0 = funcType.paramTypes().getFirst();
+                Type actual0 = args.getFirst();
+                boolean ok0 = expected0.isCompatible(actual0)
+                        || (expected0.isNumeric() && actual0.isNumeric()
+                        && Type.widen(actual0, expected0) == expected0);
+                if (!ok0 && expected0 == BuiltinType.STRING && actual0.isNumeric()) {
+                    ok0 = true; // 支持数值到字符串自动转换
                 }
-
-                if (!ok) {
+                if (!ok0) {
                     ctx.getErrors().add(new SemanticError(call,
-                            "参数类型不匹配 (位置 " + i + "): 期望 " + expected + ", 实际 " + actual));
+                            "参数类型不匹配 (位置 0): 期望 " + expected0 + ", 实际 " + actual0));
+                }
+                // 其余参数无需进一步检查类型
+            }
+        } else {
+            // 普通函数参数数量与类型校验
+            if (args.size() != funcType.paramTypes().size()) {
+                ctx.getErrors().add(new SemanticError(call,
+                        "参数数量不匹配: 期望 " + funcType.paramTypes().size()
+                                + ", 实际 " + args.size()));
+            } else {
+                for (int i = 0; i < args.size(); i++) {
+                    Type expected = funcType.paramTypes().get(i);
+                    Type actual = args.get(i);
+
+                    boolean ok = expected.isCompatible(actual)
+                            || (expected.isNumeric() && actual.isNumeric()
+                            && Type.widen(actual, expected) == expected);
+
+                    if (!ok && expected == BuiltinType.STRING && actual.isNumeric()) {
+                        ok = true; // 支持数值到字符串自动转换
+                    }
+
+                    if (!ok) {
+                        ctx.getErrors().add(new SemanticError(call,
+                                "参数类型不匹配 (位置 " + i + "): 期望 " + expected + ", 实际 " + actual));
+                    }
                 }
             }
         }
 
-        // -------- 返回类型 --------
+        // 返回最终的函数返回类型，若有错误已提前返回
         ctx.log("函数调用类型: 返回 " + funcType.returnType());
         return funcType.returnType();
     }
